syntax = "proto3";

option go_package = "proto/schemas";

service ProjectScores {
  rpc RecordSubmission(ProjectSubmission) returns (SubmissionReply) {}
}

message ProjectSubmission {
  int32 teamId = 1;
  string teamName = 2;
  repeated Score score = 3;
}

message Score {
  int32 caseId = 1;
  double score = 2;
}

enum Status {
  SUCCESS = 0;
  DUPLICATE_TEAM_NAME = 1;
}

message SubmissionReply { Status status = 1; }
